@@ -46,7 +46,7 @@
   "settings/dailyWeather.json" : -5476852410392248731,
   "settings/immigrationSettings.json" : 9010481837747930011,
   "settings/sunlight.json" : -3100569547377135443,
-  "settings/timeAndDaySettings.json" : -5460395883536756949,
+  "settings/timeAndDaySettings.json" : -1674782458183636823,
   "sounds/data/*.wav" : 5424125828252431988,
   "sounds/soundAssets.json" : -6894758391680607042,
   "terrain/doorwayClosedEdges.json" : 6293466871802031194,
@@ -63,7 +63,7 @@
   "tilesets/gui.atlas" : -4280498534045762277,
   "tilesets/masks.atlas" : -2254037008974301863,
   "tilesets/terrain.atlas" : 6831558715137998851,
-  "translations/collated.csv" : -4666635540984781788,
+  "translations/collated.csv" : 5548760212008682111,
   "translations/languages.json" : -4149426923265496189,
   "ui/cursors/*.png" : -3752772603210105608,
   "ui/fonts/*.ttf" : 2401140428532478264,
