@@ -737,7 +737,7 @@ NOTIFICATION.ROOFING_COLLAPSE.DESCRIPTION,A roof has collapsed due to a lack of 
 NOTIFICATION.ROOFING_COLLAPSE.TITLE,Roof collapsed,,,,,,,,,,,,,,,,,,,
 NOTIFICATION.SETTLER_MENTAL_BREAK.DESCRIPTION,The gruelling hardship has proven to be too much to handle for {{character}}.,,Die zermürbende Not konnte von {{character}} nicht mehr ertragen werden.,La difficulté éprouvante s'est révélée trop difficile à gérer pour {{character}}.,L'estenuante difficoltà ha dimostrato di essere troppo da gestire per {{character}}.,La penuria agotadora ha demostrado ser demasiado difícil de manejar para {{character}}.,As dificuldades exaustivas provaram ser demais para lidar com {{character}}.,,,Ужасающие трудности оказались слишком сложными для {{character}}.,Meşakkatli ve zor yaşam {{character}} ağır geldi.,De opslidende trængsler har vist sig at være for meget til at klare for {{character}}.,,De hårda svårigheterna har visat sig vara för mycket att hantera för {{character}}.,,,,過激な苦難は、{{character}} を処理するには多すぎることが証明されています。,对于 {{character}} 来说，艰难的困难已被证明太多，无法处理。,이 지저분한 어려움은 {{character}} 을 (를) 처리하기에는 너무 많은 것으로 입증되었습니다.
 NOTIFICATION.SETTLER_MENTAL_BREAK.TITLE,Mental break,,Nervenzusammenbruch,Pause mentale,Pausa mentale,Descanso mental,Intervalo mental,,,Психический перерыв,Ruhsal Çöküntü,Mental pause,,Mental paus,,,,精神崩壊,精神破裂,정신 휴식
-NOTIFICATION.SETTLER_TANTRUM.DESCRIPTION,One of your settlers has become so unhappy that they are throwing a tantrum!,,,,,,,,,,,,,,,,,,,
+NOTIFICATION.SETTLER_TANTRUM.DESCRIPTION,{{character}} has become so unhappy that they are throwing a tantrum!,,,,,,,,,,,,,,,,,,,
 NOTIFICATION.SETTLER_TANTRUM.TITLE,Tantrum!,,,,,,,,,,,,,,,,,,,
 
 ORE.BAUXITE.ADJECTIVE,Bauxite,,Bauxit,Bauxite,Bauxite,Bauxita,Bauxita,,,Боксит,Boksit,- Bauxit,,Bauxit,,,,ボーキサイト,铝土矿,보크사이트
