@@ -735,7 +735,7 @@ NOTIFICATION.FISH_EXHAUSTED.DESCRIPTION,,You have over-fished the river to such 
 NOTIFICATION.OXIDISATION_DESTRUCTION.TITLE,,"Rusted away",,,,,,,,,,,,,
 NOTIFICATION.OXIDISATION_DESTRUCTION.DESCRIPTION,,"An item or piece of furniture has been destroyed due to prolonged exposure to rain.\nSome materials such as iron and steel should not be left outside for a long period.",,,,,,,,,,,,,
 NOTIFICATION.SETTLER_TANTRUM.TITLE,,"Tantrum!",,,,,,,,,,,,,
-NOTIFICATION.SETTLER_TANTRUM.DESCRIPTION,,"One of your settlers has become so unhappy that they are throwing a tantrum!",,,,,,,,,,,,,
+NOTIFICATION.SETTLER_TANTRUM.DESCRIPTION,,"{{character}} has become so unhappy that they are throwing a tantrum!",,,,,,,,,,,,,
 ,,,,,,,,,,,,,,,
 ORE.BITUMINOUS_COAL.ADJECTIVE,,Bituminous coal,,De carbón bituminoso,,di carbone bituminoso,,,,,,,,,
 ORE.BITUMINOUS_COAL.NOUN,,Bituminous coal,Charbon bitumineux,Carbón bituminoso,Steinkohle,Carbone bituminoso,Carvão betuminoso,Hematite,Каменный уголь,Węgiel bitumiczny,Bitumineuze steenkool,Stenkol,Steinkull,Bitumenes szén,Rasvahiili
