@@ -6,6 +6,9 @@ Alpha 8.1
 - Creatures now wake up when attacked
 - Mushrooms no longer say that they care about being watered
 - Graves can now be dug when it has snowed
+- Added settler name to tantrum notification
+- Pause for notifications is now on by default
+- Corrected the way demolition works on tiles with both furniture and a constructed floor
 
 Alpha 8.0.2 - 18th November 2021
 
